--- a/src/components/pages/AvatarSelect/AvatarSelect.module.css
+++ b/src/components/pages/AvatarSelect/AvatarSelect.module.css
@@ -2,10 +2,14 @@
   width: 100%;
 }
 
-.menuIcon {
+.menuDiv {
   background-color: transparent;
-  border: none;
-  display: flex;
-  justify-content: flex-end;
+}
+
+.settingButton {
+  background-color: transparent;
+  border: 0px;
+  color: white;
   font-size: x-large;
+  margin-right: 20px;
 }
