--- a/src/components/pages/SpotSelect/SpotSelectPanel.module.css
+++ b/src/components/pages/SpotSelect/SpotSelectPanel.module.css
@@ -6,11 +6,24 @@
   height: auto;
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
 }
 
 .title {
   color: white;
   font-size: x-large;
+  text-align: center;
+}
+
+.avatarSelectCol {
+  text-align: end;
+}
+
+.avatarSelectButton {
+  background-color: transparent;
+  border: 0px;
+  color: white;
+  font-size: x-large;
+  margin-right: 20px;
 }
