Add Image Sphere and Refactoring (#6)
* Add ImageSphere

* Componentize Spot as InSpot.tsx

* Add IconMenu

* Refactor AvatarSelect for IconMenu

* Rename SpotSelectBoard to SpotSelectPanel

* Add no videoSphere spots

* Fix Degradtion of AvatarSelect

* Change Dependency between IconMenu and AvatarSelect Dialog/Store

* Generalize IconMenu for SpotSelect and InSpot

--- a/src/components/basics/IconMenu/IconMenu.module.css
+++ b/src/components/basics/IconMenu/IconMenu.module.css
@@ -18,17 +18,20 @@
   margin-left: 20px;
 }
 
-.spotName {
+.title {
   text-align: center;
   color: white;
   font-size: x-large;
 }
 
-.avatarSelect {
+.avatarSelectCol {
   text-align: end;
 }
 
-.canvasDiv {
-  margin-top: -80px;
-  height: 100vh;
+.avatarSelectButton {
+  background-color: transparent;
+  border: 0px;
+  color: white;
+  font-size: x-large;
+  margin-right: 20px;
 }
