--- a/src/components/basics/ParticipantInfoPanel/ParticipantInfoPanel.module.css
+++ b/src/components/basics/ParticipantInfoPanel/ParticipantInfoPanel.module.css
@@ -1,25 +1,11 @@
-.voiceChatPanel {
-  width: 20vw;
-  position: fixed;
-  top: 20vh;
-  right: 75vw;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 20px;
-  z-index: 1000;
-}
-
-.participant {
+.avatarFace {
   font-size: 100px;
   background-color: white;
   margin: 7px;
   border: 2px solid #5e5e5e;
   border-radius: 50%;
 }
-
-.participantVoiceChatActive {
+.avatarFaceSpeaking {
   font-size: 100px;
   background-color: white;
   margin: 7px;
@@ -33,20 +19,48 @@
   justify-content: center;
   align-items: flex-start;
 }
-
-.participantName {
+.columnEnd {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+.participantNameList {
+  text-align: start;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 0;
+  width: 80%;
+  height: auto;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.participantNameBillboard {
   text-align: justify;
   text-align: center;
   font-size: 20px;
   font-weight: bold;
+  margin: 0;
+
   color: white;
-  margin: 0%;
   background-color: rgba(0, 0, 0, 0.595);
   border-radius: 10%;
+  white-space: nowrap;
+}
+.progress {
+  width: 100%;
 }
 
-.progress {
-  width: 70px;
+.micIcon {
+  font-size: 35px;
+  color: springgreen;
+}
+.micRemoteIcon {
+  font-size: 35px;
+  stroke: rgba(172, 253, 253, 0.65);
+  stroke-width: 10px;
+  color: rgb(77, 77, 77);
 }
 
 .micOnIcon {
@@ -55,5 +69,6 @@
 }
 .micOffIcon {
   font-size: 35px;
+  margin-bottom: 5px;
   color: red;
 }
